--- a/app/views/shared/_student_homework.html.erb
+++ b/app/views/shared/_student_homework.html.erb
@@ -27,7 +27,6 @@
       <div class="button-spacing thin">
         <ul class="collapsible brand-bg-grey" data-collapsible="accordion">
           <% homework.tasks.each do |task| %>
-
             <li>
               <div  class="collapsible-header brand-bg-grey white-text">
                 <% if current_user.role == 'S' %>
@@ -47,13 +46,20 @@
                   <strong><%= task.item %></strong> <br>
                   <%= youtubify(task.url) %>
                   </p>
+                  <div class="row">
+                    <a class="modal-trigger right brand-text-green" href="#modal1">+ comment</a>
+                  </div>
                 </blockquote>
               </div>
               <div class="collapsible-body">
                 <% homework.comments.each do |comment| %>
                   <div class="comment-padding hoverable">
-                    <h5><%= comment.feedback %></h5>
-                    <p class="comment-name">---<%= comment.user.name %></p>
+                    <p>
+                      <%= comment.feedback %>
+                    </p>
+                    <p class="comment-name">
+                      ---<%= comment.user.name %>
+                    </p>
                     <% if comment.url and comment.url != "" %>
                       <%= youtubify(comment.url) %>
                     <% end %>
@@ -77,35 +83,6 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col s12 white-text">
-    <% homework.comments.each do |comment| %>
-      <div class="card panel comment-padding hoverable">
-        <h5><%= comment.feedback %></h5>
-        <p class="comment-name">---<%= comment.user.name %></p>
-        <% if comment.url and comment.url != "" %>
-          <%= youtubify(comment.url) %>
-        <% end %>
-      </div>
-    <% end %>
-  </div>
-</div>
-
-<!-- <ul class="collapsible" data-collapsible="accordion">
-  <li>
-    <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
-    <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-  </li>
-  <li>
-    <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-    <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-  </li>
-  <li>
-    <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
-    <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-  </li>
-</ul> -->
-
 <script>
 $(".toggle-task-status").on('click', function() {
   $.ajax({
@@ -120,10 +97,13 @@ $(".toggle-task-status").on('click', function() {
 });
 
 $(document).ready( function(){
-  console.log('hello')
+
    $('.collapsible').collapsible({
       accordion: false// A setting that changes the collapsible behavior to expandable instead of the default accordion style
    });
+
+   $('.modal-trigger').leanModal();
+
 });
 
 function editHomeworkNote(student, homework) {
