--- a/app/assets/stylesheets/materialize.css
+++ b/app/assets/stylesheets/materialize.css
@@ -6644,7 +6644,7 @@ input[type=range] {
   border: none;
   outline: none;
   width: 100%;
-  margin: 15px 0;
+  margin: 28px 0;
   padding: 0;
 }
 
@@ -6658,7 +6658,7 @@ input[type=range] + .thumb {
   height: 0;
   width: 0;
   border-radius: 50%;
-  background-color: #26a69a;
+  background-color: #03BB4F;
   top: 10px;
   margin-left: -6px;
   -webkit-transform-origin: 50% 50%;
@@ -6671,7 +6671,7 @@ input[type=range] + .thumb .value {
   display: block;
   width: 30px;
   text-align: center;
-  color: #26a69a;
+  color: #03BB4F;
   font-size: 0;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
@@ -6704,7 +6704,7 @@ input[type=range]::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background-color: #26a69a;
+  background-color: #03BB4F;
   -webkit-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
   margin: -5px 0 0 0;
@@ -6717,7 +6717,6 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 
 input[type=range] {
   /* fix for FF unable to apply focus style bug  */
-  border: 1px solid white;
   /*required for proper track sizing in FF*/
 }
 
@@ -6732,12 +6731,11 @@ input[type=range]::-moz-range-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #26a69a;
+  background: #03BB4F;
   margin-top: -5px;
 }
 
 input[type=range]:-moz-focusring {
-  outline: 1px solid #fff;
   outline-offset: -1px;
 }
 
