--- a/app/assets/stylesheets/application1.css
+++ b/app/assets/stylesheets/application1.css
@@ -167,3 +167,7 @@ background-image: linear-gradient(-135deg, #181818 0%, #1d1d1d 100%);
   margin-right: 0.5em;
   background-color: #A9ABAE;
 }
+
+.grad {
+  background-image: linear-gradient(210deg, #282828 0%, #323333 100%);
+}
