--- a/app/views/teacher/students/index.html.erb
+++ b/app/views/teacher/students/index.html.erb
@@ -15,14 +15,29 @@
   <% unless student[:archived] == true %>
     <div class="row">
       <div class="col s12">
-        <div class="card-panel hoverable">
+        <div class="card-panel hoverable grad">
           <%= link_to edit_teacher_student_path(student) do %>
             <i class="material-icons right brand-text-grey">edit</i>
           <% end %>
           <span class="">
             <blockquote class="">
               <h5 class="white-text thin"><%= student.name %></h5>
-              <p class="brand-text-grey"> Parents Name: <span class="thin"><%= student.parent.name %></span></p>
+              <div class="row">
+                <% if !student.parent.name.nil? %>
+                <p class="brand-text-grey col s12 m3 ">Parents Name:<br> <span class="thin"><%= student.parent.name %></span></p>
+                <% end %>
+                <% if !student.age.nil? %>
+                <p class="brand-text-grey col s12 m3 ">Age:<br> <span class="thin"><%= student.age %></span></p>
+                <% end %>
+                <% if !student.instrument.nil? %>
+                <p class="brand-text-grey col s12 m3 ">Instrument:<br> <span class="thin"><%= student.instrument %></span></p>
+                <% end %>
+                <% if !student.level.nil? %>
+                <p class="brand-text-grey col s12 m3 ">Level:<br> <span class="thin"><%= student.level %></span></p>
+                <% end %>
+                <p class="brand-text-grey col s12 m6 left">Started Lessons:<br><span class="thin"><%= student.created_at.strftime("%A, %d %b %Y") %></span></p>
+                <p class="brand-text-grey col s12 m6 left">Number of Lessons:<br><span class="thin"><%= student.homeworks.length %></span></p>
+              </div>
             </blockquote>
             <%= link_to teacher_student_homeworks_path(student) do %>
               view student
