--- a/app/views/teacher/students/edit.html.erb
+++ b/app/views/teacher/students/edit.html.erb
@@ -17,13 +17,47 @@
     </div>
   </div>
 <% end %>
-<div class="row">
+<!-- <div class="row">
   <div class="col s12 white-text card-bottom">
     <%= form_for @student, url: teacher_student_path(@student), class: "card-padding" do |f| %>
       <div class="card-panel hoverable">
         <h5 class="center">Edit <%= @student.name %>'s information'</h5>
         <div class="input-field">
-          <%= f.label "Name:" %>
+          <%= f.label "Parent Name:", class: "active" %>
+          <%= f.text_field :name %>
+        </div>
+        <div class="input-field">
+          <%= f.label "Username:", class: "active" %>
+          <%= f.text_field :username %>
+        </div>
+        <div class="input-field">
+          <%= f.label "Password:", class: "active" %>
+          <%= f.password_field :password %>
+        </div>
+        <div class="row">
+          <div class="input-field left col s12">
+             <%= f.check_box :archived, class:"filled-in" %>
+             <%= f.label :archived %>
+             <p class="brand-text-grey"> **This will stop a student from accessing the system. You will also no longer be charged for this student.</p>
+          </div>
+        </div>
+      </div>
+      <div class="center button-spacing">
+        <%= button_tag class: "btn waves-effect waves-light green" do %>
+          Submit
+          <i class="material-icons right">send</i>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div> -->
+<div class="row">
+  <div class="col s12 white-text card-bottom">
+    <%= form_for @student, url: teacher_student_path(@student), class: "card-padding" do |f| %>
+      <div class="card-panel hoverable">
+        <h5 class="center">Add a student</h5>
+        <div class="input-field">
+          <%= f.label "Name:", class: "active" %>
           <%= f.text_field :name %>
         </div>
         <div class="row">
@@ -36,20 +70,20 @@
           <div class="input-field col s12 m4">
             <%= f.label "Level:", class: "active" %>
             <%= f.select :level, ['Beginner', 'Intermediate', 'Advanced'],
-                include_blank: true%>
+                include_blank: true %>
           </div>
           <div class="input-field col s12 m4">
-            <%= f.label "Instrument:" %>
+            <%= f.label "Instrument:", class: "active" %>
             <%= f.text_field :instrument %>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s12 m4">
-            <%= f.label "Username:" %>
+            <%= f.label "Username:", class: "active" %>
             <%= f.text_field :username %>
           </div>
           <div class="input-field col s12 m4">
-            <%= f.label "Password:" %>
+            <%= f.label "Password:", class:"active" %>
             <%= f.password_field :password %>
           </div>
           <div class="input-field col s12 m4">
@@ -57,7 +91,27 @@
             <%= f.collection_select :parent, User.where(role: 'P'), :id, :name,
                 include_blank: true, selected: @selected_parent %>
           </div>
+        </div>
       </div>
+      <%= f.fields_for :parent do |parent_form| %>
+        <div id="teacher-new-student-parent-form" class="card-panel hoverable">
+          <h5 class="center">Add their parent<br> <span class="thin">If you dont already teach their siblings</span></h5>
+          <div class="row button-spacing">
+            <div class="input-field col s12 m4">
+              <%= parent_form.label "Parent Name:", class: "active" %>
+              <%= parent_form.text_field :name %>
+            </div>
+            <div class="input-field col s12 m4">
+              <%= parent_form.label "Username:", class: "active" %>
+              <%= parent_form.text_field :username %>
+            </div>
+            <div class="input-field col s12 m4">
+              <%= parent_form.label "Password:", class: "active" %>
+              <%= parent_form.password_field :password %>
+            </div>
+          </div>
+        </div>
+      <% end %>
       <div class="center button-spacing">
         <%= button_tag class: "btn waves-effect waves-light green" do %>
           Submit
@@ -67,7 +121,6 @@
     <% end %>
   </div>
 </div>
-
 <script>
   $(document).ready( function(){
     var $checkBox = $("#user_archived")
