re-add the archived field to edit. Add additonal information to archived student view

--- a/app/views/teacher/lessons/index.html.erb
+++ b/app/views/teacher/lessons/index.html.erb
@@ -10,7 +10,7 @@
 <span class="button-text white-text">add lessons!</span>
 <div class="row">
   <div class="col s12 white-text">
-    <div class="card-panel hoverable">
+    <div class="card-panel hoverable grad">
       <div class="" id="calendar"></div>
     </div>
   </div>
