--- a/app/views/teacher/students/edit.html.erb
+++ b/app/views/teacher/students/edit.html.erb
@@ -17,44 +17,17 @@
     </div>
   </div>
 <% end %>
-<!-- <div class="row">
+<div class="col s6 offset-s2">
+  <%= link_to teacher_students_path,
+              class: "btn-floating waves-effect waves-light brand-bg-lt-grey" do %>
+     <i class="material-icons">skip_previous</i>
+  <% end %>
+  <span class="button-text white-text">back to students</span>
+</div>
+<div class="row button-spacing">
   <div class="col s12 white-text card-bottom">
     <%= form_for @student, url: teacher_student_path(@student), class: "card-padding" do |f| %>
-      <div class="card-panel hoverable">
-        <h5 class="center">Edit <%= @student.name %>'s information'</h5>
-        <div class="input-field">
-          <%= f.label "Parent Name:", class: "active" %>
-          <%= f.text_field :name %>
-        </div>
-        <div class="input-field">
-          <%= f.label "Username:", class: "active" %>
-          <%= f.text_field :username %>
-        </div>
-        <div class="input-field">
-          <%= f.label "Password:", class: "active" %>
-          <%= f.password_field :password %>
-        </div>
-        <div class="row">
-          <div class="input-field left col s12">
-             <%= f.check_box :archived, class:"filled-in" %>
-             <%= f.label :archived %>
-             <p class="brand-text-grey"> **This will stop a student from accessing the system. You will also no longer be charged for this student.</p>
-          </div>
-        </div>
-      </div>
-      <div class="center button-spacing">
-        <%= button_tag class: "btn waves-effect waves-light green" do %>
-          Submit
-          <i class="material-icons right">send</i>
-        <% end %>
-      </div>
-    <% end %>
-  </div>
-</div> -->
-<div class="row">
-  <div class="col s12 white-text card-bottom">
-    <%= form_for @student, url: teacher_student_path(@student), class: "card-padding" do |f| %>
-      <div class="card-panel hoverable">
+      <div class="card-panel hoverable grad">
         <h5 class="center">Add a student</h5>
         <div class="input-field">
           <%= f.label "Name:", class: "active" %>
@@ -91,10 +64,17 @@
             <%= f.collection_select :parent, User.where(role: 'P'), :id, :name,
                 include_blank: true, selected: @selected_parent %>
           </div>
+          <div class="row">
+            <div class="input-field left col s12">
+              <%= f.check_box :archived, class:"filled-in" %>
+              <%= f.label :archived %>
+              <p class="brand-text-grey"> **This will stop a student from accessing the system. You will also no longer be charged for this student.</p>
+            </div>
+          </div>
         </div>
       </div>
       <%= f.fields_for :parent do |parent_form| %>
-        <div id="teacher-new-student-parent-form" class="card-panel hoverable">
+        <div id="teacher-new-student-parent-form" class="card-panel hoverable grad">
           <h5 class="center">Add their parent<br> <span class="thin">If you dont already teach their siblings</span></h5>
           <div class="row button-spacing">
             <div class="input-field col s12 m4">
