fixed spacing on calendar event

--- a/app/views/teacher/lessons/index.html.erb
+++ b/app/views/teacher/lessons/index.html.erb
@@ -47,8 +47,11 @@
 
     $('.fc-button-group > .ui-corner-left').text('< prev').css(nextPrev)
     $('.fc-button-group > .ui-corner-right').html('next >').css(nextPrev)
-
     $('.fc-today-button').css(today)
+    
+    $('.fc-time-grid-event').css('margin-bottom', '7px').css('margin-top', '-6px')
+
+
   });
 
 </script>
