--- a/app/assets/stylesheets/fullcalendar.css
+++ b/app/assets/stylesheets/fullcalendar.css
@@ -1107,7 +1107,7 @@ a.fc-more:hover {
 --------------------------------------------------------------------------------------------------*/
 
 .fc-ltr .fc-time-grid .fc-event-container { /* space on the sides of events for LTR (default) */
-	margin: 0 2.5% 0 2px;
+	margin: -6px 2.5% 0 2px;
 }
 
 .fc-rtl .fc-time-grid .fc-event-container { /* space on the sides of events for RTL */
