--- a/app/views/teacher/homeworks/new.html.erb
+++ b/app/views/teacher/homeworks/new.html.erb
@@ -37,12 +37,20 @@
         </div>
         <div class="row">
           <div class="col s10 offset-s1">
-            <h5 class="button-spacing"><strong>Tasks for the homework</strong></h5>
+            <div class="button-spacing row valign-wrapper">
+              <h5 class="col s5"><strong>Tasks for the homework</strong></h5>
+              <div class="col s7">
+                <a onClick="teacher_new_homework_view.AddTask()",
+                   class="btn-floating waves-effect waves-light green">
+                    <i class="material-icons">add</i>
+                </a>
+              </div>
+            </div>
             <div class="button-spacing">
               <ul id="new-home-work-task-list" class="collection">
                 <%= f.fields_for :tasks do |task_form| %>
-                  <li class="blue-grey darken-3">
-                    <div class="input-field col s6">
+                  <li class="valign-wrapper blue-grey darken-3">
+                    <div class="input-field col s8">
                       <%= task_form.label " ", class: "active" %>
                       <%= task_form.text_field :item, class: "validate" %>
                     </div>
@@ -50,7 +58,7 @@
                       <%= task_form.label " ", class: "active" %>
                       <%= task_form.text_field :url, class: "validate" %>
                     </div>
-                    <div class="col s2 bottom">
+                    <div class="col valign">
                       <a onClick="teacher_new_homework_view.RemoveTask(this)",
                          class="btn-floating waves-effect waves-light red" >
                           <i class="material-icons">cancel</i>
@@ -59,10 +67,6 @@
                   </li>
                 <% end %>
               </ul>
-              <a onClick="teacher_new_homework_view.AddTask()",
-                 class="row btn-floating waves-effect waves-light green" >
-                  <i class="material-icons">add</i>
-              </a>
             </div>
           </div>
         </div>
