--- a/app/views/shared/_student_homework.html.erb
+++ b/app/views/shared/_student_homework.html.erb
@@ -44,7 +44,11 @@
                 <blockquote>
                   <p>
                     <strong><%= task.item %></strong> <br>
-                    <%= youtubify(task.url) %>
+                    <% if task.url %>
+                      <%= youtubify(task.url) %>
+                    <% elsif task.attachment %>
+                      <%= youtubify(task.attachment.url) %>
+                    <% end %>
                   </p>
                   <div class="row">
                     <a class="modal-trigger right brand-text-green"
