--- a/app/views/teacher/students/new.html.erb
+++ b/app/views/teacher/students/new.html.erb
@@ -33,9 +33,15 @@
     <%= form_for @child, url: teacher_students_path(@child), class: "card-padding" do |f| %>
       <div class="card-panel hoverable grad">
         <h5 class="center">Add a student</h5>
-        <div class="input-field">
-          <%= f.label "Name:" %>
-          <%= f.text_field :name %>
+        <div class="row">
+          <div class="input-field col s12 m6">
+            <%= f.label "Name:" %>
+            <%= f.text_field :name %>
+          </div>
+          <div class="input-field col s12 m6">
+            <%= f.label "Email:" %>
+            <%= f.text_field :email %>
+          </div>
         </div>
         <div class="row">
           <div class="input-field col s12 m4">
@@ -64,7 +70,7 @@
             <%= f.password_field :password %>
           </div>
           <div class="input-field col s12 m4">
-            <%= f.label "Parent:", class: "active" %>
+            <%= f.label "Parent (if they are in the system):", class: "active" %>
             <%= f.collection_select :parent, User.where(role: 'P'), :id, :name,
                 include_blank: true, selected: @selected_parent %>
           </div>
@@ -74,15 +80,19 @@
         <div id="teacher-new-student-parent-form" class="card-panel hoverable grad">
           <h5 class="center">Add their parent<br> <span class="thin">If you dont already teach their siblings</span></h5>
           <div class="row button-spacing">
-            <div class="input-field col s12 m4">
+            <div class="input-field col s12 m3">
               <%= parent_form.label "Parent Name:" %>
               <%= parent_form.text_field :name %>
             </div>
-            <div class="input-field col s12 m4">
+            <div class="input-field col s12 m3">
+              <%= f.label "Email:" %>
+              <%= f.text_field :email %>
+            </div>
+            <div class="input-field col s12 m3">
               <%= parent_form.label "Username:" %>
               <%= parent_form.text_field :username %>
             </div>
-            <div class="input-field col s12 m4">
+            <div class="input-field col s12 m3">
               <%= parent_form.label "Password:" %>
               <%= parent_form.password_field :password %>
             </div>
