--- a/app/views/teacher/students/new.html.erb
+++ b/app/views/teacher/students/new.html.erb
@@ -84,8 +84,8 @@
               <%= parent_form.text_field :name %>
             </div>
             <div class="input-field col s12 m3">
-              <%= f.label "Email:" %>
-              <%= f.text_field :email %>
+              <%= parent_form.label "Email:" %>
+              <%= parent_form.text_field :email %>
             </div>
             <div class="input-field col s12 m3">
               <%= parent_form.label "Username:" %>
