--- a/app/views/notification_mailer/parent_suspended.text.erb
+++ b/app/views/notification_mailer/parent_suspended.text.erb
@@ -1,5 +1,5 @@
 Hello <%= @user.name %>,
 
-Access to your profile has been suspended. Please contact your lessons provider for more information.
+Access to your profile has been suspended. Please contact <%= @child.teacher.name %> for more information.
 
 Thanks
