further clean up the child / parent sign-up and archived emails

--- a/app/views/teacher/students/edit.html.erb
+++ b/app/views/teacher/students/edit.html.erb
@@ -35,7 +35,7 @@
             <%= f.text_field :name %>
           </div>
           <div class="input-field col s12 m6">
-            <%= f.label "Email:" %>
+            <%= f.label "Email:", class: "active" %>
             <%= f.text_field :email %>
           </div>
         </div>
@@ -90,10 +90,10 @@
             <div class="input-field col s12 m3">
               <%= parent_form.label "Username:", class: "active" %>
               <%= parent_form.text_field :username %>
-              <div class="input-field col s12 m3">
-                <%= f.label "Email:" %>
-                <%= f.text_field :email %>
-              </div>
+            </div>
+            <div class="input-field col s12 m3">
+              <%= f.label "Email:", class: "active" %>
+              <%= f.text_field :email %>
             </div>
             <div class="input-field col s12 m3">
               <%= parent_form.label "Password:", class: "active" %>
