--- a/app/views/notification_mailer/welcome_parent.text.erb
+++ b/app/views/notification_mailer/welcome_parent.text.erb
@@ -1,6 +1,7 @@
 Welcome <%= @user.name %> to MUSE!
 
 Some really great information about the app!
-has added you to their account!
+<%= @child.teacher.name %> has added you to <%= @child.name %>'s profile.
+You will be able to track along with their progress there!
 
-check us out!
+check it out!
