--- a/app/views/teacher/students/edit.html.erb
+++ b/app/views/teacher/students/edit.html.erb
@@ -113,7 +113,7 @@
 </div>
 <script>
   $(document).ready( function(){
-    var $checkBox = $("#user_archived")
+    var $checkBox = $("#lesson_recurring")
 
     checkBoxToBoolean()
 
