--- a/app/views/teacher/lessons/new.html.erb
+++ b/app/views/teacher/lessons/new.html.erb
@@ -7,7 +7,7 @@
   <span class="button-text white-text">back to calendar</span>
 </div>
 <div class="row">
-  <div class="col m10 offset-m1 s12 white-text">
+  <div class="col m12 s12 white-text">
     <div class="card-panel hoverable">
       <%= render 'form', lesson: @lesson %>
     </div>
