--- a/app/views/teacher/lessons/show.html.erb
+++ b/app/views/teacher/lessons/show.html.erb
@@ -1,24 +1,40 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @lesson.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @lesson.description %>
-</p>
-
-<p>
-  <strong>Start time:</strong>
-  <%= @lesson.start_time %>
-</p>
-
-<p>
-  <strong>End time:</strong>
-  <%= @lesson.end_time %>
-</p>
-
 <%= link_to 'Edit', edit_teacher_lesson_path(@lesson) %> |
-<%= link_to 'Back', teacher_lessons_path %>
+
+<h3 class="center h-3-spacing white-text">
+  <span class="thin">Title:</span> <%= @lesson.title %>
+</h3>
+<%= link_to teacher_lessons_path,
+            class: "btn-floating waves-effect waves-light green" do %>
+   <i class="material-icons">date_range</i>
+<% end %>
+<span class="button-text white-text">back to calendar</span>
+<div class="row button-spacing">
+  <div class="col s12 brand-text-grey">
+    <div class="card-panel hoverable grad">
+      <%= link_to edit_teacher_lesson_path(@lesson) do %>
+        <i class="material-icons right brand-text-grey">edit</i>
+      <% end %>
+      <p>
+        Title:
+        <span class="thin"><%= @lesson.title %></span>
+      </p>
+
+      <p>
+        Description:
+        <span class="thin"><%= @lesson.description %></span>
+      </p>
+
+      <p>
+        Start time:
+        <span class="thin"><%= @lesson.start_time.strftime("%A, %d %b %Y") %></span>
+      </p>
+
+      <p>
+        End time:
+        <span class="thin"><%= @lesson.end_time.strftime("%A, %d %b %Y") %></span>
+      </p>
+    </div>
+  </div>
+</div>
