--- a/app/views/teacher/lessons/show.html.erb
+++ b/app/views/teacher/lessons/show.html.erb
@@ -1,7 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_teacher_lesson_path(@lesson) %> |
-
 <h3 class="center h-3-spacing white-text">
   <span class="thin">Title:</span> <%= @lesson.title %>
 </h3>
@@ -16,8 +14,6 @@
       <%= link_to edit_teacher_lesson_path(@lesson) do %>
         <i class="material-icons right brand-text-grey">edit</i>
       <% end %>
-      <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
-
       <p>
         Title:
         <span class="thin"><%= @lesson.title %></span>
@@ -37,15 +33,19 @@
         End time:
         <span class="thin"><%= @lesson.end_time.strftime("%A, %d %b %Y") %></span>
       </p>
+      <div class="row">
+        <a class="btn-floating waves-effect waves-light red modal-trigger right" href="#modal1"><i class="material-icons">delete</i></a>
+      </div>
     </div>
   </div>
 </div>
+
 <div id="modal1" class="modal bottom-sheet">
-  <div class="modal-content">
+  <div class="modal-content center">
     <h5>Are you Sure you want to cancel this lesson?</h5>
     <%= link_to 'Yes! Cancel it', teacher_lesson_path(@lesson),
         method: :delete,
-        class: "modal-action modal-close waves-effect waves-green btn-flat brand-text-grey right" %>
+        class: "modal-action modal-close waves-effect waves-green btn-flat brand-text-grey" %>
   </div>
   <div class="modal-footer">
     <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat"></a>
