--- a/app/assets/stylesheets/application1.css
+++ b/app/assets/stylesheets/application1.css
@@ -171,3 +171,7 @@ background-image: linear-gradient(-135deg, #181818 0%, #1d1d1d 100%);
 .grad {
   background-image: linear-gradient(210deg, #282828 0%, #323333 100%);
 }
+
+.none {
+  display: none;
+}
