--- a/app/views/teacher/lessons/edit.html.erb
+++ b/app/views/teacher/lessons/edit.html.erb
@@ -7,7 +7,7 @@
   <span class="button-text white-text">back to calendar</span>
 </div>
 <div class="row">
-  <div class="col m12 s12 white-text">
+  <div class="col m12 s12 white-text button-spacing">
     <div class="card-panel hoverable grad">
       <div class="row button-spacing">
         <div class="col m10 offset-m1 s12">
