--- a/app/views/teacher/lessons/index.html.erb
+++ b/app/views/teacher/lessons/index.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 <span class="button-text white-text">add lessons!</span>
 <div class="row">
-  <div class="col s12 white-text">
+  <div class="col s12 white-text button-spacing">
     <div class="card-panel hoverable grad">
       <div class="" id="calendar"></div>
     </div>
